styles.css
header {
  background-color: #800000;
  padding: 20px;
}

body {
	font-family: 'Roboto', sans-serif;
  //background-color: beige; 
  background-image: url('https://www.tasteandtellblog.com/wp-content/uploads/2020/01/Best-Waffle-Recipe-tasteandtellblog.com-1.jpg')
}

ul {
  list-style-type: none;
  left: 10%;
}

.topnav {
  overflow: hidden;
  background-color: #333;
  width: 22%;
  border: 1px solid black;
  left: auto;
}

li {
  float: left;
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

li a:hover {
  background-color: #111;
}

p {
	margin-block-start: 2em;
	margin-block-end: 2em;
}

code {
	font-color: 'gray';
	font-family: 'Inconsolata', monospace;
}

.top {
	margin: 0px auto;
	height: 30vh;
	min-height: 300px;
	display: block;
}

.content {
	margin: 0px 100px;
}

.text {
  background-color: beige;
}

.agenda {
	width: 85%;
	height: 85%;
	position: absolute;
	top: 7px;
	left: 22px;
	bottom: 0;
	right: 0;
  padding: 5%;
}
.agenda-container {
	width: 100%;
	max-width: 800px;
	padding-top: calc(56.25% + 29px);
	position: relative;
  background-color: #38c791;
}

blink {
	animation: blinker 0.0169491525s linear infinite;
}
@keyframes blinker {	
	50% { opacity: 0; }
}
.blink-one {
	animation: blinker-one 0.0169491525s linear infinite;
}
@keyframes blinker-one {	
	0% { opacity: 0; }
}
.blink-two {
	animation: blinker-two 0.0169491525s linear infinite;
}
@keyframes blinker-two {	
	100% { opacity: 0; }
}

